# AltAPI

./: DOCS.md  QWEN.md  RATELIMIT_DOCS.md  README.md  pyproject.toml  setup.py  test_app.py  test_ratelimit.py
.github/workflows/: python-publish.yml  ruff.yml
.qwen/: settings.json  settings.json.orig
.qwen/agents/: documentation-writer.md
examples/: app.py  basic.py  cache_example.py  ratelimit_simple.py  validation.py  webapp.py  wrk.py  wrk_fastapi.py
examples/templates/: base.html  greet.html  index.html  test.html  user_form.html  users.html
src/altapi/: __init__.py  app.py  cli.py  depends.py  openapi_decorators.py  openapi_spec.py  pydantic_schemas.py  router.pyx  swagger.py
src/altapi/caching/: cache.py
src/altapi/cli_templates/basic/: DESCRIPTION  README.md  app.py  requirements.txt
src/altapi/cli_templates/full/: DESCRIPTION  README.md  app.py
src/altapi/cli_templates/full/routes/: api.py  pages.py
src/altapi/cli_templates/full/static/css/: style.css
src/altapi/cli_templates/full/static/js/: main.js
src/altapi/cli_templates/full/templates/: base.html  index.html
src/altapi/http/: request.py  responses.py
src/altapi/middleware/: __init__.py  cors.py
src/altapi/ratelimit/: __init__.py  limit.py  storage.py
src/altapi/shared/: __init__.py  client.py  manager.py  protocol.py
src/altapi/templating/: templates.py
src/altapi/websocket/: ws.py
tests/: conftest.py  test_app.py  test_caching.py  test_cli.py  test_depends.py  test_http_request.py  test_http_responses.py  test_middleware.py  test_openapi_decorators.py  test_openapi_spec.py  test_package_init.py  test_pydantic_integration.py  test_ratelimit.py  test_router.py  test_shared_deprecated.py  test_swagger.py  test_templating.py  test_validation.py  test_websocket.py
