[tool.poetry]
name = "altapi"
version = "0.1.0"
description = "A sample description."
authors = ["Author Name <author@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amogus-gggy/AltAPI"