[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AltAPI"
version = "2.0.0"

authors = [
    {name = "amogus-gggy"}
]

description = "A simple and fast ASGI microframework for Python with WebSocket support."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "uvicorn[standard]>=0.30.0",
    "anyio>=4.0.0",
    "jinja2>=3.0.0",
    "ujson",
    "cython>=3.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",

]

[project.scripts]
altapi = "altapi.cli:main"

[project.urls]
Homepage = "https://github.com/amogus-gggy/AltAPI"
