[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AltAPI"
version = "2.1.0"

authors = [
    {name = "amogus-gggy"}
]

description = "A simple and fast ASGI microframework for Python with WebSocket support."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "uvicorn[standard]>=0.30.0",
    "anyio>=4.0.0",
    "jinja2>=3.0.0",
    "orjson",
    "cython>=3.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Importing .* directly from 'altapi' is deprecated:DeprecationWarning",
]

[project.scripts]
altapi = "altapi.cli:main"

[project.urls]
Homepage = "https://github.com/amogus-gggy/AltAPI"
